typesense/tests/derive/ui/unknown_attribute.stderr
error: Unexpected field attribute "facets"
 --> tests/derive/ui/unknown_attribute.rs:8:17
  |
8 |     #[typesense(facets)]
  |                 ^^^^^^
